<resources>
  <string name="title_dialog_whats_new">What\'s New</string>
  <string name="title_activity_about">About</string>
  <string name="title_activity_feedback">Feedback</string>
  <string name="title_activity_settings">Settings</string>
  <string name="title_activity_experiments">Experiments</string>
  <string name="title_activity_help">Help</string>
  <string name="title_activity_windows">Windows</string>
  <string name="connections">Connections</string>
  <string name="title_connection_list">Connections</string>
  <string name="title_conversation_list">Conversations</string>
  <string name="conversations">Conversations</string>
  <string name="generic_ok">OK</string>
  <string name="hint_handle">Handle</string>
  <string name="edit">Edit</string>

</resources>
