<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

  <group>
    <item
      android:id="@+id/connections_fragment"
      android:icon="@drawable/ic_person_black_24dp"
      android:title="@string/connections" />
    <item
      android:id="@+id/conversations_fragment"
      android:icon="@drawable/ic_group_black_24dp"
      android:title="@string/conversations" />
  </group>

  <group>
    <item
      android:id="@+id/windows_fragment"
      android:icon="@drawable/ic_screens_none_black_24dp"
      android:title="@string/title_activity_windows" />
  </group>

  <group>
    <item
      android:id="@+id/settings_fragment"
      android:icon="@drawable/ic_settings_black_24dp"
      android:title="@string/title_activity_settings" />
    <item
      android:id="@+id/help_fragment"
      android:icon="@drawable/ic_help_black_24dp"
      android:title="@string/title_activity_help" />
    <item
      android:id="@+id/feedback_fragment"
      android:icon="@drawable/ic_feedback_black_24dp"
      android:title="@string/title_activity_feedback" />
    <item
      android:id="@+id/about_fragment"
      android:icon="@drawable/ic_info_black_24dp"
      android:title="@string/title_activity_about" />
    <item
      android:id="@+id/navigation_whats_new"
      android:icon="@drawable/ic_new_releases_black_24dp"
      android:title="@string/title_dialog_whats_new" />
  </group>

</menu>
